[package]
name = "ixgbe-driver"
version = "0.1.0"
edition = "2021"
authors = ["KuangjuX <kuangjux@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bit_field = "0.10.2"
volatile = "0.3"
core_detect = "1.0.0"

[dependencies.smoltcp]
git = "https://github.com/rcore-os/smoltcp.git"
default-features = false
rev = "2ade274"
features = ["alloc", "log","medium-ethernet","proto-ipv4","socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dns"]
    


[features]
default = []
irq = []
